--- a/.env.example
+++ b/.env.example
@@ -45,3 +45,8 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+
+STRIPE_KEY=your publishable key here
+STRIPE_SECRET=your secret here
+CASHIER_CURRENCY=gbp
