--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,13 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
+        "laravel/cashier": "^12.10",
         "laravel/framework": "^8.12",
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
         "nesbot/carbon": "^2.43",
-        "phpmailer/phpmailer": "^6.2"
+        "phpmailer/phpmailer": "^6.2",
+        "stripe/stripe-php": "^7.75"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
